# INST414-Research

./: Makefile  README.md  Sprint_3.ipynb  criterion.csv  imdb_top_1000.csv  merged_dataset.csv  pyproject.toml  requirements.txt
auteur_theory/: __init__.py  dataset.py  features.py  plots.py
auteur_theory/modeling/: predict.py  train.py
docs/: imdb_top_1000.csv  letterboxd.csv  mkdocs.yml
docs/docs/: index.md
notebooks/: Data Cleaning and Visualizations.py  INST414 - Research.ipynb
