[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "auteur_theory"
version = "0.0.1"
description = "Analyzing audience and cinephile reception, this project examines how visual and thematic elements influence the ratings of auteur-driven films across Criterion, IMDb, and Letterboxd, balancing artistic significance with broader audience trends."
authors = [
  { name = "gabrielle_lara" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["auteur_theory"]
include = ["pyproject.toml", "auteur_theory/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["auteur_theory"]
force-sort-within-sections = true

